# AgentWatch

./: .bedrock_agentcore.yaml  .env.example  .gitignore  README.md  ambient_agent.py  config.yaml  constants.py  get_agent_url.py  pyproject.toml  requirements.txt  test_runtime_invoke.sh  utils.py
deployment/: DEPLOYMENT_GUIDE.md  deploy_lambda.sh  redeploy_agentcore.sh
deployment/cloudformation/: README.md  cloudformation.yaml  deploy-stack.sh
idp_setup/: cognito_config.json  get_bearer_token.py
lambda/: scheduled_monitor.py
prompt_templates/: ambient_agent_system_prompt.txt
tools/: __init__.py  aws_helpers.py  cloudwatch_tools.py
